@@ -19,6 +19,8 @@ serd (UNRELEASED) unstable; urgency=low
   * Escape ASCII control characters in output (e.g. fix problems with string
     literals that start with a backspace)
   * Improve URI resolution to cover most of the abnormal cases from RFC3986
+  * Support file://localhost/foo URIs in serd_uri_to_path()
+  * Support Windows file://c:/foo URIs in serd_uri_to_path() on all platforms
 
  -- David Robillard <d@drobilla.net>  (UNRELEASED)
 
